--- a/DevCom/DevCom/Views/Shared/_Layout.cshtml
+++ b/DevCom/DevCom/Views/Shared/_Layout.cshtml
@@ -110,14 +110,13 @@
                     }
                 </div>
             </div>
+            <div class="my-5"></div>
             @RenderBody()
         </section>
     </div>
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/js")
-    <script src="@Url.Content("https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js")" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
-    <!--<script src="@Url.Content("https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js")" integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD" crossorigin="anonymous"></script>-->
     @RenderSection("scripts", required: false)
 </body>
 </html>
