--- a/DevCom/DevCom/Views/Home/WelcomeUser.cshtml
+++ b/DevCom/DevCom/Views/Home/WelcomeUser.cshtml
@@ -1,5 +1,4 @@
-﻿
-<div class="position-absolute top-50 start-50 translate-middle text-center">
+﻿<div class="position-absolute top-50 start-50 translate-middle text-center">
     <h1 class="display-2">
         Welcome To DevCom
     </h1>
@@ -10,10 +9,6 @@
         Get Started
     </a>
     <div class="mt-5">
-        @Html.ActionLink("Sign In", "Login", "Auth", null, new { @class = "btn btn-primary" })
+        @Model
     </div>
 </div>
-
-
-
-
